[metadata]
name = django-ca
version = attr: django_ca.VERSION
author = Mathias Ertl
author_email = mati@er.tl
url = https://github.com/mathiasertl/django-ca
description = A Django app providing a SSL/TLS certificate authority.
long_description = file:docs/source/intro.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 4 - Beta
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Topic :: Security :: Cryptography
    Topic :: Security
    Typing :: Typed
project_urls =
    Documentation = https://django-ca.readthedocs.io/
    Source = https://github.com/mathiasertl/django-ca/
    Issues = https://github.com/mathiasertl/django-ca/issues
    Changelog = https://django-ca.readthedocs.io/en/latest/changelog.html

[options]
python_requires = >=3.7
install_requires =
    Django>=3.2
    asn1crypto>=1.2.0
    cryptography>=35.0
    django-object-actions>=2.0.0
    idna>=2.10
    packaging
    importlib-metadata; python_version < '3.8'
    typing-extensions; python_version < '3.8'

packages = find:
package_dir = 
    = ca
# Include data files specified by MANIFEST.in:
include_package_data = true

# zip_safe = False because of static files
zip_safe = False

[options.extras_require]
acme =
    acme>=1.18
    # https://josepy.readthedocs.io/en/stable/changelog/
    # * 1.5.0 (2020-11-03) adds support for Python 3.9
    josepy>=1.8.0
    requests
    dnspython>=2.0
redis =
    # hiredis: 2.0 released: 2021-03-28
    hiredis>=1.1  
    redis>=3.5
    # django-redis-cache: 3.0 drops support for Django 2.2
    django-redis-cache>=2.1  
celery = celery>=5.0
# mysqlclient: 2.0 release: 2020-07-02
mysql = mysqlclient>=1.4  
postgres = psycopg2>2.8

#[options.package_data]
#"*" = static/django_ca/admin/js/sign.js

[options.packages.find]
where = ca
exclude = django_ca.tests, ca
