[metadata]
name = django-ca
version = attr: django_ca.VERSION
author = Mathias Ertl
author_email = mati@er.tl
url = https://github.com/mathiasertl/django-ca
description = A Django app providing a SSL/TLS certificate authority.
long_description = file:docs/source/intro.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django :: 3.2
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2
    Framework :: Django
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Topic :: Security :: Cryptography
    Topic :: Security
    Typing :: Typed
project_urls =
    Documentation = https://django-ca.readthedocs.io/
    Source = https://github.com/mathiasertl/django-ca/
    Issues = https://github.com/mathiasertl/django-ca/issues
    Changelog = https://django-ca.readthedocs.io/en/latest/changelog.html

[options]
python_requires = >=3.8
install_requires =
    Django>=3.2
    acme>=2.6.0
    asn1crypto>=1.2.0
    cryptography>=37.0
    django-object-actions>=4.0.0
    dnspython>=2.1
    idna>=3.0
    josepy>=1.13.0
    packaging
    requests

packages = find:
package_dir = 
    = ca
# Include data files specified by MANIFEST.in:
include_package_data = true

# zip_safe = False because of static files
zip_safe = False

[options.extras_require]
api =
    django-ninja==0.22.2
redis =
    hiredis>=2.0.0
    redis>=4.3
celery = celery>=5.3
# https://github.com/PyMySQL/mysqlclient/issues/620
mysql = mysqlclient<2.2
postgres = psycopg2>2.8
psycopg3 =
    psycopg[c,pool]
    Django>=4.2
yaml = PyYAML>=6.0.0

#[options.package_data]
#"*" = static/django_ca/admin/js/sign.js

[options.packages.find]
where = ca
exclude = django_ca.tests, ca
